// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser-key-name-2-schema .searchValue: .searchValue 1`] = `
Object {
  "targetSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "searchValue",
    "label": "",
    "params": Array [],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "number",
  },
  "wrapSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "",
    "label": "",
    "params": Array [
      StringSchema {
        "description": "",
        "enum": Array [],
        "examples": Array [],
        "id": "",
        "keyName": "searchValue",
        "label": "",
        "params": Array [],
        "rules": Object {
          "maxLength": undefined,
          "minLength": undefined,
          "pattern": undefined,
          "required": false,
        },
        "title": "",
        "type": "number",
      },
    ],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "object",
  },
}
`;

exports[`parser-key-name-2-schema [0].params.updateBy[0].time: [0].params.updateBy[0].time 1`] = `
Object {
  "targetSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "time",
    "label": "",
    "params": Array [],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "null",
  },
  "wrapSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "",
    "label": "",
    "params": Array [
      StringSchema {
        "description": "",
        "enum": Array [],
        "examples": Array [],
        "id": "",
        "keyName": "",
        "label": "",
        "params": Array [
          StringSchema {
            "description": "",
            "enum": Array [],
            "examples": Array [],
            "id": "",
            "keyName": "params",
            "label": "",
            "params": Array [
              StringSchema {
                "description": "",
                "enum": Array [],
                "examples": Array [],
                "id": "",
                "keyName": "updateBy",
                "label": "",
                "params": Array [
                  StringSchema {
                    "description": "",
                    "enum": Array [],
                    "examples": Array [],
                    "id": "",
                    "keyName": "",
                    "label": "",
                    "params": Array [
                      StringSchema {
                        "description": "",
                        "enum": Array [],
                        "examples": Array [],
                        "id": "",
                        "keyName": "time",
                        "label": "",
                        "params": Array [],
                        "rules": Object {
                          "maxLength": undefined,
                          "minLength": undefined,
                          "pattern": undefined,
                          "required": false,
                        },
                        "title": "",
                        "type": "null",
                      },
                    ],
                    "rules": Object {
                      "maxLength": undefined,
                      "minLength": undefined,
                      "pattern": undefined,
                      "required": false,
                    },
                    "title": "",
                    "type": "object",
                  },
                ],
                "rules": Object {
                  "maxLength": undefined,
                  "minLength": undefined,
                  "pattern": undefined,
                  "required": false,
                },
                "title": "",
                "type": "array",
              },
            ],
            "rules": Object {
              "maxLength": undefined,
              "minLength": undefined,
              "pattern": undefined,
              "required": false,
            },
            "title": "",
            "type": "object",
          },
        ],
        "rules": Object {
          "maxLength": undefined,
          "minLength": undefined,
          "pattern": undefined,
          "required": false,
        },
        "title": "",
        "type": "object",
      },
    ],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "array",
  },
}
`;

exports[`parser-key-name-2-schema dept.searchValue.username: dept.searchValue.username 1`] = `
Object {
  "targetSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "username",
    "label": "",
    "params": Array [],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "string",
  },
  "wrapSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "dept",
    "label": "",
    "params": Array [
      StringSchema {
        "description": "",
        "enum": Array [],
        "examples": Array [],
        "id": "",
        "keyName": "searchValue",
        "label": "",
        "params": Array [
          StringSchema {
            "description": "",
            "enum": Array [],
            "examples": Array [],
            "id": "",
            "keyName": "username",
            "label": "",
            "params": Array [],
            "rules": Object {
              "maxLength": undefined,
              "minLength": undefined,
              "pattern": undefined,
              "required": false,
            },
            "title": "",
            "type": "string",
          },
        ],
        "rules": Object {
          "maxLength": undefined,
          "minLength": undefined,
          "pattern": undefined,
          "required": false,
        },
        "title": "",
        "type": "object",
      },
    ],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "object",
  },
}
`;

exports[`parser-key-name-2-schema dept.searchValue: dept.searchValue 1`] = `
Object {
  "targetSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "searchValue",
    "label": "",
    "params": Array [],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "number",
  },
  "wrapSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "dept",
    "label": "",
    "params": Array [
      StringSchema {
        "description": "",
        "enum": Array [],
        "examples": Array [],
        "id": "",
        "keyName": "searchValue",
        "label": "",
        "params": Array [],
        "rules": Object {
          "maxLength": undefined,
          "minLength": undefined,
          "pattern": undefined,
          "required": false,
        },
        "title": "",
        "type": "number",
      },
    ],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "object",
  },
}
`;

exports[`parser-key-name-2-schema roles[0].params.updateBy: roles[0].params.updateBy 1`] = `
Object {
  "targetSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "updateBy",
    "label": "",
    "params": Array [],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "unknown",
  },
  "wrapSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "roles",
    "label": "",
    "params": Array [
      StringSchema {
        "description": "",
        "enum": Array [],
        "examples": Array [],
        "id": "",
        "keyName": "",
        "label": "",
        "params": Array [
          StringSchema {
            "description": "",
            "enum": Array [],
            "examples": Array [],
            "id": "",
            "keyName": "params",
            "label": "",
            "params": Array [
              StringSchema {
                "description": "",
                "enum": Array [],
                "examples": Array [],
                "id": "",
                "keyName": "updateBy",
                "label": "",
                "params": Array [],
                "rules": Object {
                  "maxLength": undefined,
                  "minLength": undefined,
                  "pattern": undefined,
                  "required": false,
                },
                "title": "",
                "type": "unknown",
              },
            ],
            "rules": Object {
              "maxLength": undefined,
              "minLength": undefined,
              "pattern": undefined,
              "required": false,
            },
            "title": "",
            "type": "object",
          },
        ],
        "rules": Object {
          "maxLength": undefined,
          "minLength": undefined,
          "pattern": undefined,
          "required": false,
        },
        "title": "",
        "type": "object",
      },
    ],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "array",
  },
}
`;

exports[`parser-key-name-2-schema roles[0].params: roles[0].params 1`] = `
Object {
  "targetSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "params",
    "label": "",
    "params": Array [],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "boolean",
  },
  "wrapSchema": StringSchema {
    "description": "",
    "enum": Array [],
    "examples": Array [],
    "id": "",
    "keyName": "roles",
    "label": "",
    "params": Array [
      StringSchema {
        "description": "",
        "enum": Array [],
        "examples": Array [],
        "id": "",
        "keyName": "",
        "label": "",
        "params": Array [
          StringSchema {
            "description": "",
            "enum": Array [],
            "examples": Array [],
            "id": "",
            "keyName": "params",
            "label": "",
            "params": Array [],
            "rules": Object {
              "maxLength": undefined,
              "minLength": undefined,
              "pattern": undefined,
              "required": false,
            },
            "title": "",
            "type": "boolean",
          },
        ],
        "rules": Object {
          "maxLength": undefined,
          "minLength": undefined,
          "pattern": undefined,
          "required": false,
        },
        "title": "",
        "type": "object",
      },
    ],
    "rules": Object {
      "maxLength": undefined,
      "minLength": undefined,
      "pattern": undefined,
      "required": false,
    },
    "title": "",
    "type": "array",
  },
}
`;
